# sandwich-pipeline

./: .gitignore  .gitmodules  Bobuke.lnk  Dungance Designer.lnk  Dungance Painter.lnk  Dungaya.lnk  Dungaya.sh  Dungini.lnk  Dungini.sh  Mayo.sh  Nungeon.lnk  Nungeon.sh  Panini.sh  README.md  pyproject.toml
.githooks/: post-checkout  pre-commit  update-venv
.github/workflows/: ci.yml
pipeline/: __main__.py  env.pyi  env.py~
pipeline/lib/tex/: Reflective-Macbeth-chart.png.rat
pipeline/pipe/: __init__.py  playblast_naming.py  playblast_shotgrid.py  texconverter.py
pipeline/pipe/asset/: __init__.py  paths.py  version_adapter.py  version_service.py  versioning.py
pipeline/pipe/b/: assetfile.py  publish.py
pipeline/pipe/db/: __init__.py  _memoize.py  interface.py  sgaadb.py  shotgrid.py  typing.py
pipeline/pipe/environment/: __init__.py  version_adapter.py
pipeline/pipe/glui/: dialogs.py  save_version_dialog.py  version_browser.py
pipeline/pipe/h/: animpostprocess.py  assetbuilder.py  component_output_hda.py  hipfile.py  nodelayouts.py  publish.py  shading.py  variants.py
pipeline/pipe/h/hipfile/: asset.py  environment.py  filemanager.py  shot.py
pipeline/pipe/h/playblast/: dialog.py  paths.py  playblaster.py  tool.py  ui.py
pipeline/pipe/h/util/: parmdata.py
pipeline/pipe/m/: __init__.py  command.py  local.py  picker.py  reload.py  scale_reference.py  shotfile.py  space_switch.py  util.py  wrangler.py
pipeline/pipe/m/assetfile/: assetfile_manager.py
pipeline/pipe/m/layout/: __init__.py  file_manager.py  maker.py  publish.py
pipeline/pipe/m/playblast/: anim.py  playblaster.py  previs.py  turnaround_playblaster.py  ui.py
pipeline/pipe/m/publish/: __init__.py  anim.py  anim_lock.py  asset.py  camera.py  customanim.py  previs_asset.py  publisher.py  rig.py  usdchaser.py
pipeline/pipe/m/rig/: __init__.py  model.py  utils.py
pipeline/pipe/m/rig_builder/: __init__.py  build.py  progress.py  publish.py  test.py
pipeline/pipe/m/scripts/: ALT_Camera.py  Assign_FX_Material.py  Camera.py  FX_Card.py  FX_Card_Rig.py  Pointlight_Rig.py  Set_Up.py  Spotlight_Rig.py
pipeline/pipe/m/shotfile/: anim.py  rlo.py  shotfile_manager.py
pipeline/pipe/m/symmetry/: __init__.py  color.py  gradient.py  math.py  spline.py  visualize.py
pipeline/pipe/playblast/: playblaster.py  presets.py
pipeline/pipe/shot/: __init__.py  version_adapter.py
pipeline/pipe/sp/: __init__.py  assetfile.py  channels.py  export.py  ui.py
pipeline/pipe/struct/: db.py  util.py
pipeline/pipe/telemetry/: __init__.py  config.py  context.py  contract.py  docs.py  emit.py  events.py  local_stack.py  registry.py  render_harvest.py  spool.py  storage_scan.py  tractor_poll.py
pipeline/pipe/telemetry/rules/: storage_categories.v1.json
pipeline/pipe/util/: __init__.py  filemanager.py  playblaster.py
pipeline/pipe/versioning/: __init__.py  model.py  service.py  store.py  stream_paths.py
pipeline/shared/: util.py
pipeline/software/: baseclass.py
pipeline/software/blender/: dcc.py
pipeline/software/houdini/: dcc.py
pipeline/software/maya/: dcc.py
pipeline/software/maya/plugins/: pipeline.py
pipeline/software/maya/scripts/: aperture
pipeline/software/maya/shelves/: shelf_Bobo_Animation.mel  shelf_Bobo_Assets.mel  shelf_Bobo_Layout.mel  shelf_Bobo_RLO.mel  shelf_LnD_Animation.mel  shelf_LnD_Assets.mel  shelf_SKD_Animation.mel  shelf_SKD_Assets.mel  shelf_SKD_Layout.mel  shelf_SKD_RLO.mel  shelf_SKD_Rigging.mel
pipeline/software/maya/userSetup/: userSetup.py
pipeline/software/nuke/: dcc.py
pipeline/software/nuke/tools/: init.py
pipeline/software/substance_designer/: dcc.py
pipeline/software/substance_painter/: dcc.py
pipeline/tools/ocio/: build_sandwich_config.py
resources/: flashbang
src/: __main__.py
src/core/: __init__.py  texconverter.py  users.py
src/core/asset/: paths.py  version_adapter.py
src/core/environment/: __init__.py  version_adapter.py
src/core/glui/: __init__.py  dialogs.py  progress.py  save_version_dialog.py  version_browser.py
src/core/hud/: __init__.py
src/core/playblast/: __init__.py  encoding.py  naming.py  playblaster.py  presets.py  tempdir.py
src/core/playblast/shotgrid/: __init__.py  _connection.py  paths.py  playlists.py  upload_flow.py  versions.py
src/core/playblast/ui/: __init__.py  review_playlist_combo.py
src/core/shot/: version_adapter.py
src/core/shotgrid/: __init__.py  _memoize.py  client.py  entities.py  errors.py  paths.py
src/core/struct/: __init__.py  json_serializable.py  material.py  timeline.py
src/core/telemetry/: __init__.py  __main__.py  config.py  emit.py  events.py  ingester.py  local_stack.py  scope.py  spool.py
src/core/texture/: converter.py
src/core/ui/: dialogs.py
src/core/util/: __init__.py  filemanager.py  paths.py  struct.py  users.py  util.py
src/core/versioning/: __init__.py  model.py  service.py  store.py
src/dcc/houdini/: launch.py
src/dcc/houdini/hipfile/: asset.py  environment.py  filemanager.py  paths.py  shot.py
src/dcc/houdini/playblast/: config.py  (+2 more)
src/dcc/maya/: launch.py
src/dcc/nuke/: launch.py
src/dcc/substance_designer/: launch.py
src/dcc/substance_painter/: launch.py
src/framework/: launcher.py
src/pipe/: __init__.py  texconverter.py
src/pipe/asset/: __init__.py  paths.py  version_adapter.py
src/pipe/environment/: __init__.py  version_adapter.py
src/pipe/glui/: __init__.py  dialogs.py  progress.py  save_version_dialog.py  version_browser.py
src/pipe/playblast/: __init__.py  encoding.py  naming.py  playblaster.py  presets.py  tempdir.py
src/pipe/shot/: __init__.py  version_adapter.py
src/pipe/shotgrid/: __init__.py  _memoize.py  client.py  entities.py  errors.py  paths.py
src/pipe/struct/: __init__.py  material.py  timeline.py  util.py
src/pipe/telemetry/: __init__.py  __main__.py  config.py  emit.py  events.py  ingester.py  local_stack.py  scope.py  spool.py
src/pipe/util/: __init__.py  filemanager.py  struct.py  util.py
src/pipe/versioning/: __init__.py  model.py  service.py  store.py
src/shared/: users.py  util.py
(+203 files in other folders)
