[project]
name = "sandwich-pipeline"
version = "0.1.0"
description = "Pipeline for BYU Animation's Class of 2027 capstone film"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Scott Milner", email = "scottdmilner@gmail.com" },
    { name = "Michael Harmon", email = "michaelharmonart@gmail.com" }
]
dependencies = [
    "attrs>=24.2.0,<25",
    "cattrs>=23.2.3,<24",
    "ffmpeg-python>=0.2.0,<0.3",
    "qt-py>=1.4.1,<2",
    "filelock>=3.17.0,<4",
    "six>=1.17.0,<2",
    "gitpython>=3.1.45,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.5.7,<0.6",
    "maya-stubs>=0.4.1,<0.5",
    "types-usd>=24.5.1,<25",
    "types-houdini>=19.5.1,<20",
    "types-katana>=5.0.5.0,<6",
    "types-mari>=5.0.5.0,<6",
    "types-nuke>=13.2.8.0,<14",
    "types-opencolorio>=2.2.1.2,<3",
    "types-pyside2>=5.15.2.1.7,<6",
    "types-substance-painter>=2023.8.3.0.0,<2024",
    "nptyping>=2.5.0,<3",
    "ty>=0.0.20",
]

[tool.ruff]
exclude = [
    ".git",
    "MOPS",
    "NukeSurvivalToolkit_publicRelease",
    "VFX-LYNX",
    "ae_SVG",
    "dwpicker",
    "dwpicker_git",
    "lib/python",
    "mayacapture",
    "maya-timeline-marker_git",
    "modelChecker",
    "modelChecker_git",
    'pin_shift.py',
    "rjg",
    'y-rig',
    "shotgun_api3",
    "studiolibrary",
    "timeline_marker",
    "pipeline/software/maya/scripts/**"
]

[tool.ty.rules]
unused-type-ignore-comment = "ignore"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "dwpicker.**",
    "modelChecker.**",
    "substance_painter_plugins.**",
    "yrig.**",
    "tractor.**",
    "pipe.db.shotgun_api3.**",
]
replace-imports-with-any = [
    # Keep known dynamic legacy boundaries as `Any`.
    "pipe.db.shotgun_api3.**",
    # Keep Maya command modules dynamic to avoid high-volume legacy churn.
    "maya.cmds",
    "maya.cmds.**",
    "maya.mel",
    "maya.mel.**",
    # `mayaUsd` remains dynamic and is not fully typed.
    "mayaUsd",
    "mayaUsd.**",
    # Substance API surface is partially dynamic in plugin runtime.
    "substance_painter",
    "substance_painter.**",
]

[tool.ty.environment]
extra-paths = [
    "pipeline/software/maya/scripts/",
    "pipeline/",
]

[tool.ty.src]
include = ["pipeline"]
respect-ignore-files = false
exclude = [
    ".git",
    "pipeline/lib/MOPS/**",
    "pipeline/software/nuke/tools/NukeSurvivalToolkit_publicRelease",
    "pipeline/lib/VFX-LYNX/**",
    "pipeline/lib/ae_SVG/**",
    "pipeline/**/dwpicker*",
    "pipeline/**/dwpicker*/**",
    "pipeline/lib/python/**",
    "pipeline/**/mayacapture/**",
    "pipeline/**/maya-timeline-marker_git/**",
    "pipeline/**/modelChecker*",
    "pipeline/**/modelChecker*/**",
    "pipeline/**/pin_shift.py",
    "pipeline/**/rjg/**",
    "pipeline/lib/y-rig/**",
    "pipeline/lib/shotgun_api3/**",
    "pipeline/**/studiolibrary/**",
    "pipeline/**/timeline_marker/**",
    "pipeline/**/houdini/scripts/**",
    "pipeline/**/maya/scripts/**"
]


[tool.pyright]
extraPaths = [
    "pipeline/software/maya/scripts/",
    "pipeline/",
]
typeCheckingMode = "standard"
reportMissingModuleSource = "information"
